--- a/.github/workflows/server-cloner.yml
+++ b/.github/workflows/server-cloner.yml
@@ -1,11 +1,7 @@
 name: Discord Server Cloner Bot
 
 on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours to ensure bot stays alive
+  workflow_dispatch:   # Sirf manually trigger hoga
 
 jobs:
   run-bot:
@@ -18,7 +14,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '22'
         cache: 'npm'
     
     - name: Install dependencies
